--- a/radio-app/composer.json
+++ b/radio-app/composer.json
@@ -11,9 +11,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
+        "hydrat-agency/laravel-2fa": "^1.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^2.3"
     },
     "require-dev": {
