--- a/radio-app/composer.json
+++ b/radio-app/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^8.2",
         "bacon/bacon-qr-code": "^3.0",
+        "darkaonline/l5-swagger": "*",
         "hydrat-agency/laravel-2fa": "^1.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
