--- a/radio-app/composer.json
+++ b/radio-app/composer.json
@@ -19,7 +19,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "pragmarx/google2fa": "^8.0",
-        "pragmarx/google2fa-laravel": "^2.3"
+        "pragmarx/google2fa-laravel": "^2.3",
+        "zircote/swagger-php": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
