--- a/radio-app/composer.json
+++ b/radio-app/composer.json
@@ -15,6 +15,7 @@
         "darkaonline/l5-swagger": "^9.0",
         "giggsey/libphonenumber-for-php": "*",
         "hydrat-agency/laravel-2fa": "^1.2",
+        "laravel-notification-channels/twilio": "^4.1",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
