`Removed Twilio notification channel, added Nexmo (Vonage) notification channel, updated services configuration and routes, and modified SendRendezVousReminders command to send notifications via mail only.`

--- a/radio-app/composer.json
+++ b/radio-app/composer.json
@@ -17,10 +17,12 @@
         "hydrat-agency/laravel-2fa": "^1.2",
         "laravel-notification-channels/twilio": "^4.1",
         "laravel/framework": "^12.0",
+        "laravel/nexmo-notification-channel": "^3.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^2.3",
+        "vonage/client": "^4.2",
         "zircote/swagger-php": "^5.1"
     },
     "require-dev": {
